# upload_app

./: .gitignore  Dockerfile  MANIFEST.in  README.md  backup_db.sh  changelog  crontab  docker-compose.yml  iTec2018.org  requirements.txt  start_all.sh
app/: run.sh  setup.py
app/upload_app/: __init__.py  extensions.py  setup_db.py  upload_app.py
app/upload_app/run/: CMakeLists.txt
app/upload_app/run/src/: CMakeLists.txt  templateSrc.cc  templateSrc.h  templateTest.cc
app/upload_app/static/: scripts.js  style.css
app/upload_app/templates/: layout.html  login.html  placeholder_after.html  placeholder_before.html  rankings.html  register.html  status.html
app/upload_app/templates/utils/: flasher.html
app/upload_app/tests/diamonds/: elev-test1.in  elev-test1.ok  elev-test2.in  elev-test2.ok  elev-test3.in  elev-test3.ok  student-test1.in  student-test1.ok  student-test2.in  student-test2.ok  student-test3.in  student-test3.ok
app/upload_app/tests/kfib/: elev-test10.in  elev-test11.in  elev-test12.in  elev-test13.in  elev-test14.in  elev-test15.in  elev-test16.in  elev-test17.in  elev-test18.in  elev-test19.in  elev-test20.in  elev-test5.in  elev-test6.in  elev-test7.in  elev-test8.in  elev-test9.in
app/upload_app/tests/text_tree/: elev-test1.in  elev-test1.ok  elev-test2.in  elev-test2.ok  elev-test3.in  student-test1.in  student-test1.ok  student-test2.in  student-test3.in  student-test3.ok
app/upload_app/tests/verbal_tics/: elev-test1.in  elev-test1.ok  (+8 more)
nginx/: Dockerfile  nginx.conf
nginx/app/: run.sh
nginx/static-html-directory/: index.html
(+13 files in other folders)
